# cookiecutter-django

./: README.md
{{cookiecutter.project_name}}/: .gitignore  README.md  manage.py  pyproject.toml  setup.cfg
{{cookiecutter.project_name}}/src/{{cookiecutter.python_namespace}}/{{cookiecutter.project_slug}}/: settings.py  urls.py
{{cookiecutter.project_name}}/src/{{cookiecutter.python_namespace}}/{{cookiecutter.project_slug}}/core/templates/{{cookiecutter.project_slug}}/: example.html
{{cookiecutter.project_name}}/{{cookiecutter.python_namespace}}/{{cookiecutter.project_slug}}/: asgi.py  settings.py  storage.py  urls.py  wsgi.py
{{cookiecutter.project_name}}/{{cookiecutter.python_namespace}}/{{cookiecutter.project_slug}}/core/: urls.py  views.py
{{cookiecutter.project_name}}/{{cookiecutter.python_namespace}}/{{cookiecutter.project_slug}}/core/templates/{{cookiecutter.project_slug}}/: example.html
