[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{cookiecutter.project_name}}"
dynamic = ["version"]
description = "{{cookiecutter.project_description}}"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "Django>=5.2.0",
    "django-environ>=0.12.0",
    "django-debug-toolbar>=5.2.0",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.0",
    "ruff>=0.14.0",
]

[project.urls]
Homepage = "{{cookiecutter.project_url}}"
Repository = "{{cookiecutter.project_repo}}"

[tool.hatch.version]
path = "{{cookiecutter.python_namespace}}/{{cookiecutter.project_slug}}/__init__.py"

[tool.ruff.lint]
extend-select = [
    "I", "N", "D", "UP", "B", "A", "Q",
    "DJ",
]
extend-ignore = [
    "D1",
]
