[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.project_description}}"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "Django~=5.2.16",
    "django-environ>=0.13.0",
    "django-debug-toolbar>=7.0.0",
    "django-browser-reload>=1.21.0",
]

[project.urls]
Homepage = "{{cookiecutter.project_url}}"
Repository = "{{cookiecutter.project_repo}}"

[tool.ruff.lint]
extend-select = [
    "I", "N", "D", "UP", "B", "A", "Q",
    "DJ",
]
extend-ignore = [
    "D1",
]
